2017-08-15  Joseph Myers  <joseph@codesourcery.com>

	PR target/78460
	PR target/67712
	* config/sh/sh-mem.cc (sh_expand_cmpnstr): Only unroll for
	constant count if that count is less than 32.

2017-08-15  Nathan Sidwell  <nathan@acm.org>

	* gcc.c (execute): Emit friendlier message if inferior is killed
	by an external cause.

2017-08-15  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/81790
	* tree-ssa-sccvn.c (vn_lookup_simplify_result): Handle both
	CONSTRUCTORs from simplifying and VN.

2017-08-14  Martin Sebor  <msebor@redhat.com>

	* builtin-attrs.def: Add comments.

2017-08-14  Martin Sebor  <msebor@redhat.com>

	PR c/81117
	* doc/extend.texi (attribute nonstring): Document new attribute.

2017-08-14  Martin Sebor  <msebor@redhat.com>

	PR c/81117
	* tree-diagnostic.c (default_tree_printer): Handle %G.
	* gimple-pretty-print.h (percent_G_format): Declare new function.
	* gimple-pretty-print.c (percent_G_format): Define.
	* tree-pretty-print.c (percent_K_format): Add argument.

2017-08-14  Martin Sebor  <msebor@redhat.com>

	PR translation/79998
	* gimple-ssa-sprintf.c (pass_sprintf_length::handle_gimple_call):
	Remove a stray space.

2017-08-14  Uros Bizjak  <ubizjak@gmail.com>

	PR target/46091
	* config/i386/i386.md (*anddi_1_btr): New insn_and_split pattern.
	(*iordi_1_bts): Ditto.
	(*xordi_1_btc): Ditto.

2017-08-14  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR target/79845
	* config/rs6000/linux64.h (INVALID_64BIT): Use quoted strings.
	* config/rs6000/rs6000-c.c (altivec_resolve_overloaded_builtin):
	Likewise.
	* config/rs6000/rs6000.c (rs6000_init_hard_regno_mode_ok): Use
	quoted strings, and make more translator-friendly.
	(darwin_rs6000_override_options): Likewise.
	(rs6000_option_override_internal): Likewise.
	(rs6000_return_in_memory): Fix overlong line.
	(init_cmulative_args): Use quoted strings, and make more
	translator-friendly.
	(rs6000_pass_by_reference): Fix overlong line.
	(def_builtin): Use quoted strings.